--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ img {
   width: 100%;
   padding: 1.5em;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex-wrap: wrap;
   box-sizing: border-box;
 }
